[gd_scene load_steps=13 format=3 uid="uid://ca0r5037d1r36"]

[ext_resource type="Script" path="res://scenes/game_controller.gd" id="1_2w3ie"]
[ext_resource type="Texture2D" uid="uid://bpjxsk1mxfl77" path="res://assets/1x1_#ffffffff.png" id="1_7cnjc"]
[ext_resource type="Script" path="res://addons/simple_card_pile_ui/card_pile_ui.gd" id="2_0rnba"]
[ext_resource type="PackedScene" uid="uid://bfa11717e7smk" path="res://scenes/card_ui.tscn" id="3_pya54"]
[ext_resource type="Script" path="res://addons/simple_card_pile_ui/card_dropzone.gd" id="5_eker0"]
[ext_resource type="Curve" uid="uid://cilxr3u0kmg7y" path="res://card/hand_rotation_curve.tres" id="5_mkqdw"]
[ext_resource type="Texture2D" uid="uid://bud17mwgkqh2t" path="res://environment/capsule_corps.jpg" id="5_pmlb6"]
[ext_resource type="Texture2D" uid="uid://e3ofwn0lncir" path="res://environment/effect_area.png" id="6_0qheb"]
[ext_resource type="Texture2D" uid="uid://jmgabsudjwyb" path="res://environment/rip_area.png" id="8_txsle"]
[ext_resource type="Texture2D" uid="uid://4msuyvdhk0yc" path="res://environment/battle_area.png" id="9_08iel"]

[sub_resource type="SystemFont" id="SystemFont_p8b0w"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_uu5a6"]
font_names = PackedStringArray("Bahnschrift")

[node name="Game" type="Node"]
script = ExtResource("1_2w3ie")

[node name="Background" type="TextureRect" parent="."]
offset_top = -267.0
offset_right = 1148.0
offset_bottom = 881.0
texture = ExtResource("5_pmlb6")
expand_mode = 1

[node name="BackgroundDark" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 0.635294)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_7cnjc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
scale = Vector2(0.7, 0.7)
transform = Transform2D(0.7, 0, 0, 0.7, 0, 0)

[node name="PlacingCardZone" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.8571
offset_top = -298.857
offset_right = 638.143
offset_bottom = 481.143
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="BattleZone2" type="HBoxContainer" parent="CanvasLayer/PlacingCardZone"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="BattleIMG4" type="TextureRect" parent="CanvasLayer/PlacingCardZone/BattleZone2"]
layout_mode = 2
texture = ExtResource("9_08iel")

[node name="BattleIMG5" type="TextureRect" parent="CanvasLayer/PlacingCardZone/BattleZone2"]
layout_mode = 2
texture = ExtResource("9_08iel")

[node name="BattleIMG6" type="TextureRect" parent="CanvasLayer/PlacingCardZone/BattleZone2"]
layout_mode = 2
texture = ExtResource("9_08iel")

[node name="EffectZone" type="HBoxContainer" parent="CanvasLayer/PlacingCardZone"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="EnvironmentIMG" type="TextureRect" parent="CanvasLayer/PlacingCardZone/EffectZone"]
layout_mode = 2
texture = ExtResource("9_08iel")

[node name="BattleZone2" type="Control" parent="CanvasLayer/PlacingCardZone/EffectZone/EnvironmentIMG"]
layout_mode = 2
anchors_preset = 0
offset_right = 160.0
offset_bottom = 240.0
script = ExtResource("5_eker0")
stack_display_gap = 4
max_stack_display = 1

[node name="EffectIMG" type="TextureRect" parent="CanvasLayer/PlacingCardZone/EffectZone"]
layout_mode = 2
texture = ExtResource("6_0qheb")

[node name="BattleZone3" type="Control" parent="CanvasLayer/PlacingCardZone/EffectZone/EffectIMG"]
layout_mode = 2
anchors_preset = 0
offset_right = 160.0
offset_bottom = 240.0
script = ExtResource("5_eker0")
stack_display_gap = 4
max_stack_display = 1

[node name="BattleZone1" type="HBoxContainer" parent="CanvasLayer/PlacingCardZone"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="BattleIMG1" type="TextureRect" parent="CanvasLayer/PlacingCardZone/BattleZone1"]
layout_mode = 2
texture = ExtResource("9_08iel")

[node name="BattleIMG2" type="TextureRect" parent="CanvasLayer/PlacingCardZone/BattleZone1"]
layout_mode = 2
texture = ExtResource("9_08iel")

[node name="BattleIMG3" type="TextureRect" parent="CanvasLayer/PlacingCardZone/BattleZone1"]
layout_mode = 2
texture = ExtResource("9_08iel")

[node name="BattleZoneCollection" type="Node" parent="CanvasLayer"]

[node name="BattleZone4" type="Control" parent="CanvasLayer/BattleZoneCollection"]
layout_mode = 3
anchors_preset = 0
offset_left = 537.143
offset_top = 842.143
offset_right = 1214.14
offset_bottom = 842.143
script = ExtResource("5_eker0")
stack_display_gap = 4
max_stack_display = 1

[node name="BattleZone5" type="Control" parent="CanvasLayer/BattleZoneCollection"]
layout_mode = 3
anchors_preset = 0
offset_left = 537.143
offset_top = 872.143
offset_right = 1214.14
offset_bottom = 872.143
script = ExtResource("5_eker0")
stack_display_gap = 4
max_stack_display = 1

[node name="BattleZone6" type="Control" parent="CanvasLayer/BattleZoneCollection"]
layout_mode = 3
anchors_preset = 0
offset_left = 537.143
offset_top = 902.143
offset_right = 1214.14
offset_bottom = 902.143
script = ExtResource("5_eker0")
stack_display_gap = 4
max_stack_display = 1

[node name="BattleZone1" type="Control" parent="CanvasLayer/BattleZoneCollection" node_paths=PackedStringArray("card_pile_ui")]
layout_mode = 3
anchors_preset = 0
offset_left = 615.143
offset_top = 617.143
offset_right = 775.143
offset_bottom = 857.143
script = ExtResource("5_eker0")
card_pile_ui = NodePath("../../FullPile")
stack_display_gap = 4
max_stack_display = 1
card_ui_face_up = false

[node name="BattleZone2" type="Control" parent="CanvasLayer/BattleZoneCollection" node_paths=PackedStringArray("card_pile_ui")]
layout_mode = 3
anchors_preset = 0
offset_left = 795.143
offset_top = 617.143
offset_right = 955.143
offset_bottom = 857.143
script = ExtResource("5_eker0")
card_pile_ui = NodePath("../../FullPile")
stack_display_gap = 4
max_stack_display = 1
card_ui_face_up = false

[node name="BattleZone3" type="Control" parent="CanvasLayer/BattleZoneCollection" node_paths=PackedStringArray("card_pile_ui")]
layout_mode = 3
anchors_preset = 0
offset_left = 975.143
offset_top = 617.143
offset_right = 1135.14
offset_bottom = 857.143
script = ExtResource("5_eker0")
card_pile_ui = NodePath("../../FullPile")
stack_display_gap = 4
max_stack_display = 1
card_ui_face_up = false

[node name="RipZoneCollection" type="Node" parent="CanvasLayer"]

[node name="RipZone1" type="Control" parent="CanvasLayer/RipZoneCollection" node_paths=PackedStringArray("card_pile_ui")]
layout_mode = 3
anchors_preset = 0
offset_left = 1371.0
offset_top = 624.0
offset_right = 1531.0
offset_bottom = 864.0
script = ExtResource("5_eker0")
card_pile_ui = NodePath("../../FullPile")
stack_display_gap = 4
max_stack_display = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/RipZoneCollection/RipZone1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("8_txsle")

[node name="RipZone2" type="Control" parent="CanvasLayer/RipZoneCollection" node_paths=PackedStringArray("card_pile_ui")]
layout_mode = 3
anchors_preset = 0
offset_left = 1371.0
offset_top = 82.0
offset_right = 1531.0
offset_bottom = 322.0
script = ExtResource("5_eker0")
card_pile_ui = NodePath("../../FullPile")
stack_display_gap = 4
max_stack_display = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/RipZoneCollection/RipZone2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("8_txsle")

[node name="Info" type="TextureRect" parent="CanvasLayer"]
offset_left = 21.0
offset_top = 26.0
offset_right = 694.0
offset_bottom = 1036.0
scale = Vector2(0.65, 0.65)
expand_mode = 1

[node name="FullPile" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("2_0rnba")
json_card_database_path = "res://card/battle/battle_database.json"
json_card_collection_path = "res://card/battle/battle_collection.json"
extended_card_ui = ExtResource("3_pya54")
draw_pile_position = Vector2(20, 800)
hand_pile_position = Vector2(800, 950)
discard_pile_position = Vector2(1250, 700)
stack_display_gap = 4
max_stack_display = 1
card_return_speed = 0.3
max_hand_size = 18
max_hand_spread = 1200
drag_when_clicked = false
hand_rotation_curve = ExtResource("5_mkqdw")

[node name="ButtonControl" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 8.57143
offset_top = -50.0
offset_right = 48.5714
offset_bottom = -10.0

[node name="Ready Button" type="Button" parent="CanvasLayer/ButtonControl"]
offset_left = 1261.43
offset_top = 492.857
offset_right = 1417.43
offset_bottom = 569.857
theme_override_fonts/font = SubResource("SystemFont_p8b0w")
theme_override_font_sizes/font_size = 50
text = "Ready"

[node name="CardOnBattle" type="VBoxContainer" parent="CanvasLayer/ButtonControl"]
layout_mode = 0
offset_left = 834.286
offset_top = 741.429
offset_right = 902.286
offset_bottom = 833.429

[node name="Flip" type="Button" parent="CanvasLayer/ButtonControl/CardOnBattle"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_uu5a6")
theme_override_font_sizes/font_size = 35
text = "Flip"

[connection signal="battle_card_clicked" from="CanvasLayer/FullPile" to="." method="_on_battle_card_clicked"]
[connection signal="card_hovered" from="CanvasLayer/FullPile" to="." method="_on_card_hovered"]
[connection signal="card_unhovered" from="CanvasLayer/FullPile" to="." method="_on_card_unhovered"]
[connection signal="hand_card_clicked" from="CanvasLayer/FullPile" to="." method="_on_hand_card_clicked"]
[connection signal="hand_card_unclicked" from="CanvasLayer/FullPile" to="." method="_on_hand_card_unclicked"]
[connection signal="button_up" from="CanvasLayer/ButtonControl/Ready Button" to="." method="_on_ready_button_up"]
[connection signal="button_up" from="CanvasLayer/ButtonControl/CardOnBattle/Flip" to="." method="_on_flip_button_up"]
